--- a/JS 07 API/index.html
+++ b/JS 07 API/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DFetch - API</title>
+    <script src="./pages/main.js" defer></script>
     <link rel="stylesheet" href="./src/main.css">
-    <script src="./pages/main.js"></script>
+    
 </head>
 <body>
     <section class="container">
@@ -23,5 +24,14 @@
         <button>Mostrar productos</button>
         <div id="store"></div>
     </section>
+
+    <section class="container">
+
+        <h2>Datos</h2>
+        <button id="btn-mensaje">Traer información</button>
+        <div id="mensaje"></div>
+        <!--<h2 id= "alerta"> </h2> -->
+    </section>
+
 </body>
 </html>
